<resources>
    <string name="app_name">SpaceXplore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="menu_capsule">Capsules</string>
    <string name="capsule_active_since">Active since</string>
    <string name="capsule_mission_count">Missions</string>
    <string name="capsule_no_time_data">No data</string>
    <string name="capsule_landings">Landings</string>
    <string name="capsule_type_serial">Serial | type</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sortBy">Sort by:</string>
    <string name="sort_by_serial_asc">SERIAL ASCENDING</string>
    <string name="sort_by_type_desc">SERIAL DESCENDING</string>
    <string name="sort_by_time_asc">TIME ASCENDING</string>
    <string name="sort_by_time_desc">TIME DESCENDING</string>
    <string name="menu_rocket">Rockets</string>
    <string name="rocket_first_flight">First flight</string>
    <string name="rocket_company">Company</string>
    <string name="rocket_cost">Cost per launch</string>
    <string name="rocket_succes_rate">Success rate</string>
    <string name="metrics_card_title">Metrics</string>

    <string name="concatenate_int_string">%1$d %2$s</string>
    <string name="concatenate_double_string">%1.2f %2$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="units_header">Units</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_launches">All launches</string>
    <string name="launches_name">Name:</string>
    <string name="launch_date">Launch date</string>
    <string name="launch_number">Flight number</string>
    <string name="menu_cores">Cores</string>
    <string name="core_type_serial">Serial</string>
    <string name="core_blocks">Block</string>
    <string name="core_reuse_count">Reuse count</string>
    <string name="menu_about">About</string>
    <string name="app_version">1.2</string>
    <string name="capsule_water_landing">Water landing</string>
    <string name="capsule_land_landing">Land landings</string>
    <string name="menu_company">Company</string>
</resources>
