<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>

              <item
                android:id="@+id/nav_launches"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_launches"/>
        <item
                android:id="@+id/nav_cores"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_cores"/>
        <item
                android:id="@+id/nav_capsule"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_capsule"/>
        <item
                android:id="@+id/nav_rocket"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_rocket"/>

        <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_add_circle_green_24dp"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_about"/>


    </group>
</menu>
