<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.capsule.BottomSheetMainSortFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/capsule_sort_bottom_sheet_layout"
        android:orientation="vertical"
        android:background="@android:color/transparent"

>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/round_dialog"

    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sortBy"
                android:textSize="@dimen/largest_text"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="3dp"

        >

        </TextView>
        <View style="@style/MediumDivider"
              android:layout_marginBottom="16dp"/>
        <LinearLayout
                android:id="@+id/linear_serial_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/bottom_sheet_item_padding"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"


                android:focusable="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_serial_asc"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
            >

            </TextView>
            <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1
"
            />
            <ImageView
                    android:id="@+id/check_icon_serial_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            >

            </ImageView>

        </LinearLayout>
        <View style="@style/SmallDivider"/>
        <LinearLayout
                android:id="@+id/linear_serial_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/bottom_sheet_item_padding"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"


                android:focusable="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_type_desc"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
            >

            </TextView>
            <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1
"
            />
            <ImageView
                    android:id="@+id/check_icon_serial_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            >

            </ImageView>

        </LinearLayout>
        <View style="@style/SmallDivider"/>
        <LinearLayout
                android:id="@+id/linear_time_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/bottom_sheet_item_padding"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"


                android:focusable="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_time_asc"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
            >

            </TextView>
            <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1
"
            />
            <ImageView
                    android:id="@+id/check_icon_time_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

            >

            </ImageView>

        </LinearLayout>
        <View style="@style/SmallDivider"/>
        <LinearLayout
                android:id="@+id/linear_time_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/bottom_sheet_item_padding"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"

                android:focusable="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_time_desc"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
            >

            </TextView>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            />
            <ImageView
                    android:id="@+id/check_icon_time_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            >

            </ImageView>

        </LinearLayout>
    </LinearLayout>





</LinearLayout>