<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rocketIV">
        <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_card_linear"
                    android:orientation="horizontal">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/launches_expandable_item_name"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/rocket_company"
                            >

                    </TextView>

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:id="@+id/rocket_company"

                            android:textSize="@dimen/larger_text"
                            android:textStyle="bold"
                            >

                    </TextView>
                </LinearLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="Status"
                            android:layout_gravity="right"
                            >

                    </TextView>
                    <TextView
                            android:id="@+id/rocket_status_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/larger_text"
                            android:textStyle="bold"
                            android:layout_gravity="right"

                            >

                    </TextView>
                    <!--                    <ImageView-->
                    <!--                            android:layout_width="match_parent"-->
                    <!--                            android:layout_height="match_parent"-->
                    <!--                            android:id="@+id/capsule_status_icon"-->
                    <!--                    >-->

                    <!--                    </ImageView>-->
                </LinearLayout>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_card_linear"
                    android:orientation="horizontal">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/rocket_first_flight"
                            >

                    </TextView>

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:id="@+id/rocket_first_flight"
                            android:textSize="@dimen/larger_text"
                            android:textStyle="bold"
                            >

                    </TextView>
                </LinearLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/rocket_succes_rate">

                    </TextView>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                            android:id="@+id/rocket_succes_rate"
                            android:textSize="@dimen/larger_text"
                            android:textStyle="bold"
                            android:layout_gravity="right"
                            >

                    </TextView>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_card_linear"
                    android:orientation="horizontal">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/rocket_cost"
                            >

                    </TextView>

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:id="@+id/rocket_cost_per_launch"
                            android:textSize="@dimen/larger_text"
                            android:textStyle="bold"
                            >

                    </TextView>
                </LinearLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"

                            android:layout_gravity="right">

                    </TextView>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="GET MORE"
                                android:textSize="@dimen/larger_text"
                                >

                        </TextView>
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_forward_black_24dp">

                        </ImageView>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>