<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View" />

        <variable
                name="rocketItem"
                type="com.appdevpwl.spacex.data.rocket.model.Rocket" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/rocketIV"

    >


    </ProgressBar>
    <ImageView
            android:id="@+id/rocketIV"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@android:color/darker_gray"
            imageUrl="@{rocketItem.flickr_images[0]}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

    </ImageView>
    <View android:layout_width="match_parent" android:layout_height="50sp"
          app:layout_constraintBottom_toBottomOf="@+id/rocketIV"
          android:background="#33000000" android:id="@+id/view">
    </View>
    <TextView
            android:id="@+id/rocket_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@{rocketItem.rocket_name}"
            android:paddingLeft="16dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="@+id/rocketIV" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

    </TextView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rocketIV">
        <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/margin_bottom_card_linear"
                          android:orientation="horizontal">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/rocket_company"
                    >

                    </TextView>

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:id="@+id/rocket_company"
                                android:text="@{rocketItem.company}"
                              android:textSize="@dimen/larger_text"
                              android:textStyle="bold"
                    >

                    </TextView>
                </LinearLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="Status"
                              android:layout_gravity="right"
                    >

                    </TextView>
                    <TextView
                            android:id="@+id/rocket_status_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/larger_text"
                            android:textStyle="bold"
                            android:layout_gravity="right"
                            android:text="@{String.valueOf(rocketItem.active)}"

                    >

                    </TextView>
                    <!--                    <ImageView-->
                    <!--                            android:layout_width="match_parent"-->
                    <!--                            android:layout_height="match_parent"-->
                    <!--                            android:id="@+id/capsule_status_icon"-->
                    <!--                    >-->

                    <!--                    </ImageView>-->
                </LinearLayout>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/margin_bottom_card_linear"
                          android:orientation="horizontal">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/rocket_first_flight"
                    >

                    </TextView>

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:id="@+id/rocket_first_flight"
                              android:textSize="@dimen/larger_text"
                              android:textStyle="bold"
                            android:text="@{rocketItem.first_flight}"
                    >

                    </TextView>
                </LinearLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/rocket_succes_rate">

                    </TextView>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:id="@+id/rocket_succes_rate"
                              android:textSize="@dimen/larger_text"
                              android:textStyle="bold"
                              android:layout_gravity="right"
                            android:text="@{String.valueOf(rocketItem.success_rate_pct)+'%'}"
                    >

                    </TextView>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/margin_bottom_card_linear"
                          android:orientation="horizontal">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/rocket_cost"
                    >

                    </TextView>

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:id="@+id/rocket_cost_per_launch"
                              android:textSize="@dimen/larger_text"
                              android:textStyle="bold"
                            android:text="@{'$' + String.valueOf(rocketItem.cost_per_launch)}"
                    >

                    </TextView>
                </LinearLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"

                              android:layout_gravity="right">

                    </TextView>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="GET MORE"
                                android:textSize="@dimen/larger_text"
                        >

                        </TextView>
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_forward_black_24dp">

                        </ImageView>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>